Jellypane.css
/* ... */
#scenesContent .innerCardFooter {
	background: #04133199;
	min-width: 33.333%;
}


.layout-desktop .itemMiscInfo.itemMiscInfo-primary::before {
	content: '';
	position: fixed;
	top: -98vh;
	left: 0;
	right: 0;
	height: 4em;
	z-index: -1;
	scroll-snap-align: end;
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container {
	position: absolute;
	top: -20em;
	right: 0em;
	width: 65.5%;
	z-index: 10;
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .card.overflowBackdropCard.card-hoverable.card-withuserdata {
	width: 12.5vw;
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .sectionTitle {
	filter: drop-shadow(0px 0px 1px rgb(0, 0, 0));
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .sectionTitle.sectionTitle-cards.padded-right::before {
	filter: drop-shadow(0px 0px 1px rgb(0, 0, 0));
	scroll-snap-align: unset;
}

.layout-desktop .subtitleSync {
  position: absolute;
  width: 100%;
  margin-top: 4em !important;
}

.layout-desktop .libraryPage:not(.noSecondaryNavPage) {
  padding-top: 4.5em !important;
}

.layout-desktop .collectionItems .verticalSection {
  height: 46em;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  max-width: 69vw;
}

.layout-desktop .collectionItems .card.portraitCard.card-hoverable.card-withuserdata {
	scroll-snap-align: start;
}

.layout-desktop .collectionItems .portraitCard {
  width: 13.75em;
}

/* Hide Watched Counter on Collections */
[data-type="BoxSet"] .countIndicator { display: none; }

.pageTabContent.is-active::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-size: cover;
    opacity: 1;
    z-index: -1;
    background-attachment: fixed;
    background-color: #101e3dbf;
    backdrop-filter: blur(7px);
}

.raised:focus {
	background: #0413316b;
}

.layout-desktop #homeTab .overflowPortraitCard, .overflowSquareCard {
    width: 9.35vw !important;
}

.layout-desktop .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-list {
	margin-top: -9em;
	padding-top: 8em;
	scroll-snap-align: start;
}

.skip-button {
	background-color: #041331;
	transition: transform 0.1s ease-in-out, border 0.3s ease-in-out;
	border-radius: 0;
	color: #fff;
	font-weight: 500;
	border: 1px solid #aac0f775;
	bottom: 8em;
	right: 9.35em;
}

.skip-button:hover,
.skip-button:focus {
	transform: scale(1.05);
	border: 1px solid #4181ff;
}

.upNextContainer {

}

@media (orientation:portrait) {
	.upNextContainer {
		font-size: 65%;
	}
}

.raised.raised-mini.btnHide.upNextDialog-button.emby-button:hover {

}
/*Change Intro Skip Color*/
#skipIntro .emby-button:hover, #skipIntro .emby-button:focus {
	background-color: #041331;
	transform: scale(1.05);
}

.raised:hover {
	background-color: #041331;
	transform: scale(1.05);
}

#skipIntro {

}

#skipIntro.upNextContainer {

}

#skipIntro .emby-button {
	color: #ffffff;
	font-size: 100%;
	background: rgba(0, 8, 25, 1);
	border: 1px solid #2c4177;
}

/*Iskelderon's cleaner Scenes & Specials grid */
@media (min-width:1800px) and (min-height:900px) {
	#specialsCollapsible .emby-scroller,
	#musicVideosCollapsible.emby-scroller,
	#scenesCollapsible.emby-scroller {
		margin-right: 0;
	}

	#specialsCollapsible .emby-scrollbuttons,
	#musicVideosCollapsible .emby-scrollbuttons,
	#scenesCollapsible .emby-scrollbuttons  {
		display: none;
	}

	#specialsCollapsible .itemsContainer,
	#musicVideosCollapsible .itemsContainer,
	#scenesCollapsible .itemsContainer {
		flex-wrap: wrap;
	}

	#specialsCollapsible .overflowBackdropCard,
	#musicVideosCollapsible .overflowBackdropCard,
	#scenesCollapsible .overflowBackdropCard {
		max-width: 16.4vw;
	}
}

.osdTimeText {
}

/* 768p */

@media only screen and (min-width: 800px) and (max-width: 1400px) and (max-height: 800px) {
	body {
		font-size: 73%;
	}
	.layout-desktop .detailPagePrimaryContent {
		font-size: 98.5%;
	}
	.sectionTabs {
		margin-top: -2em;
	}
	.layout-desktop .detailPagePrimaryContainer.padded-left.padded-right.detailRibbon::before {
		top: -3.83em;
		height: 3.83em;
	}
}

/* 1440p */

@media (min-width: 2000px) {
	body {
		font-size: 133.3333%;
	}
	.layout-desktop .detailPagePrimaryContent {
		font-size: 98.5%;
	}
	.layout-desktop .mainDrawer.transition.touch-menu-la.drawer-open {
		width: 21em !important;
	}
	.layout-desktop .detailPagePrimaryContainer.padded-left.padded-right.detailRibbon::before {
		top: -3.97em;
		height: 3.97em;
	}
}

/* 4k */

@media (min-width: 3000px) {
	body {
		font-size: 200%;
	}
}

/* MOBILE */

.layout-mobile .itemBackdrop {
	display: block;
	background-attachment: fixed;
	background-position: 50%;
	background-repeat: no-repeat;
	background-size: cover;
	height: 100vh !important;
	position: fixed !important;
	top: 0em;
	width: 100%;
}

@media (orientation: portrait) {
	.layout-mobile  .itemDetailPage {
		padding-top: 50vh !important;
	}
	.layout-mobile [dir="ltr"] .mainDetailButtons {
		margin-bottom: 0;
		padding-left: 0;
		justify-content: space-between;
	}
}

@media (orientation: landscape) {
	.layout-mobile  .itemDetailPage {
		padding-top: 50vh !important;
	}
	.layout-mobile [dir="ltr"] .infoWrapper {
		padding-left: 29.5%;
	}
	.layout-mobile [dir="ltr"] .mainDetailButtons {
		margin-left: 0;
		padding-left: 29.5%;
	}
}

@media (orientation: landscape) and (min-width: 50em) {
	.layout-mobile [dir="ltr"] .infoWrapper {
		padding-left: 0%;
	}
	.layout-mobile [dir="ltr"] .mainDetailButtons {
		margin-left: 0;
		padding-left: 0%;
	}
}

.layout-mobile .detailPagePrimaryContainer.padded-left.padded-right.detailRibbon {
	background: #04133199;
	backdrop-filter: blur(8px);
}

.layout-mobile .detailPageSecondaryContainer.padded-bottom-page {
	background: #04133199;
	backdrop-filter: blur(8px);
}
/* ... */

